--- a/css/style_RP.css
+++ b/css/style_RP.css
@@ -73,7 +73,7 @@ h1 {
 h2 {
 	font-weight: 300;
 	font-size: 27px;
-	line-height: 15px;
+	line-height: 16px;
 	letter-spacing: 1px;
 }
 
@@ -93,10 +93,40 @@ footer {
 	height: 200px;
 	margin: 0 auto;
 	background-color: rgb(247, 243, 240);	
+	clear: both;
+	padding-top: 80px;
+	text-align: center;
 }
 
-#contact {
+.info a {
+	text-align: center;
+	font-size: 30px;
+	font-weight: 300;
+}
 
+.center {
+	display: block;
+	margin: 0 auto;
+	width: 90%;
+}
+
+.resumelink {
+	text-align: center;
+	font-size: 20px;
+}
+
+.resumelink:hover {
+	padding-bottom: 1px;
+	border-bottom: 3px solid lightgray;
+}
+
+#contact a:hover {
+	padding-bottom: 1px;
+	border-bottom: 3px solid lightgray;
+}
+
+footer a {
+	font-size: 30px;
 }
 
 @media screen and (max-width: 480px) {
@@ -127,7 +157,15 @@ footer {
 
 	.lightbox img{
 		width: 90%;
+	}
 
+	footer a {
+		font-size: 20px;
+	}
+
+	.resumelink {
+		text-align: center;
+		font-size: 18px;
 	}
 
 }
